--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt-contrib-concat": "latest",
     "grunt-contrib-uglify": "latest",
     "grunt-contrib-watch": "latest",
-    "grunt-contrib-compass": "latest"
+    "grunt-autoprefixer": "latest",
+    "grunt-contrib-sass": "latest"
   }
 }
